# dev_tools

./: .bash_profile  .flake8  .isort.cfg  .p10k.zsh  Dockerfile  Makefile  MakefileTemplate  README.md  build_new_env.sh  del_env.sh  hey_friend.txt  mac_dev_applications_setup_instructions.md  pyproject.toml  setup.cfg  vscode_settings.json
