[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[tool.black]
line_length = 94

[tool.isort]
line_length = 94
skip = []
profile = "black"
multi_line_output = 3
sections = [ "FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY" ]

[tool.pytest.ini_options]
markers = [ "legacy", "unit", "integration", "e2e",]
junit_family = "xunit2"
testpaths = [ "tests/legacy", "tests/unit", "tests/integration", "tests/e2e" ]

[tool.coverage.run]
source = []

[tool.coverage.report]
show_missing = true
