[metadata]
name = examplepackage
version = 0.0.1
author = Kyle Simpson
description = This is an example project
long_description = This is a longer description for the project
url = https://www.linkedin.com/in/kyle-e-simpson/
keywords = sample, example, setuptools

[options]
python_requires = >=3.10, <3.11
install_requires = 
    click
    xarray

[options.extras_require]
test = 
    coverage
    flake8
    pytest
